[gd_scene load_steps=6 format=3 uid="uid://cr3tawrk6li8u"]

[ext_resource type="Script" uid="uid://bur742tma2ena" path="res://prefabs/tools/dialogue_editor/dialogue_editor.gd" id="1_7w1wt"]
[ext_resource type="PackedScene" uid="uid://dx00oa0dadpvj" path="res://prefabs/ui/text_box.tscn" id="2_nr7ai"]
[ext_resource type="PackedScene" uid="uid://dmc2ox37dega8" path="res://prefabs/audio/audio_handler.tscn" id="3_lbw1y"]
[ext_resource type="PackedScene" uid="uid://blb38hmic2jvq" path="res://prefabs/overworld/test_camera.tscn" id="4_k3rpk"]
[ext_resource type="PackedScene" uid="uid://bojquldxuq7di" path="res://prefabs/tools/dialogue_editor/dialogue_item_editor/dialogue_choices_editor/dialogue_choices_editor.tscn" id="5_jlx2h"]

[node name="DialogueEditor" type="Node2D"]
script = ExtResource("1_7w1wt")
metadata/_edit_vertical_guides_ = [20.0]
metadata/_edit_horizontal_guides_ = [-70.0]

[node name="AudioHandler" parent="." instance=ExtResource("3_lbw1y")]

[node name="MapRoot" type="Node2D" parent="."]

[node name="NpcButtons" type="Node2D" parent="MapRoot"]
z_index = 10

[node name="TestCamera" parent="." instance=ExtResource("4_k3rpk")]
disableInputHandling = true

[node name="TextBoxRoot" parent="TestCamera" instance=ExtResource("2_nr7ai")]
scale = Vector2(0.25, 0.25)

[node name="HudRoot" type="Control" parent="TestCamera"]
layout_mode = 3
anchors_preset = 0
offset_left = -160.0
offset_top = -90.0
offset_right = 1120.0
offset_bottom = 630.0
scale = Vector2(0.25, 0.25)
mouse_filter = 2

[node name="MenuStateTitle" type="RichTextLabel" parent="TestCamera/HudRoot"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
bbcode_enabled = true
text = "[center]Menu State Title[/center]"

[node name="ActionButtonsHFlow" type="HFlowContainer" parent="TestCamera/HudRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 48.0
offset_bottom = -640.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="DialogueItemsTabContainer" type="TabContainer" parent="TestCamera/HudRoot"]
visible = false
layout_mode = 0
offset_top = 80.0
offset_right = 720.0
offset_bottom = 468.0

[node name="EntrySettings" type="Control" parent="TestCamera/HudRoot"]
anchors_preset = 0
offset_left = 720.0
offset_top = 80.0
offset_right = 1280.0
offset_bottom = 468.0
mouse_filter = 2

[node name="InteractableSpeakerControl" type="Control" parent="TestCamera/HudRoot/EntrySettings"]
visible = false
anchors_preset = 0
offset_right = 420.0
offset_bottom = 32.0
mouse_filter = 2

[node name="ControlLabel" type="RichTextLabel" parent="TestCamera/HudRoot/EntrySettings/InteractableSpeakerControl"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.0
offset_right = 236.0
offset_bottom = 11.0
grow_vertical = 2
mouse_filter = 2
text = "Interactable: Speaker"

[node name="InteractableSpeaker" type="LineEdit" parent="TestCamera/HudRoot/EntrySettings/InteractableSpeakerControl"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -14.333334
offset_bottom = 14.333332
grow_horizontal = 0
grow_vertical = 2
placeholder_text = "Required"

[node name="DialogueChoiceEditor" parent="TestCamera/HudRoot" instance=ExtResource("5_jlx2h")]
visible = false
layout_mode = 1

[connection signal="text_changed" from="TestCamera/HudRoot/EntrySettings/InteractableSpeakerControl/InteractableSpeaker" to="." method="_on_interactable_speaker_text_changed"]
